--- a/docs/content/content.html.adoc
+++ b/docs/content/content.html.adoc
@@ -11,17 +11,28 @@ directory, which is `source` by default.
 This means, Frontman converts all files with recognized file extensions to HTML.
 To change the content directory, see <<configuration#content, Configuration>>.
 
-For a more customized setup, you can add content in your `config.rb` file:
+For a more custom setup, set the `:auto_add_resources` option to `false`
+and use the `Frontman::Bootstrapper.resources_from_dir` method to add resources to the sitemap.
+
+Add the following code to your `config.rb` file:
 
 [,ruby]
 ----
 # config.rb
 
-# Turn off default content directory
-content_dir = Frontman::Config.get(nil)
+# Turn off autoloading resources from content directory
+Frontman::Config.set :auto_add_resources, false
 
-# Add all recognized files from a directory
-Frontman::Bootstrapper.resources_from_dir('custom/path').each do |resource|
+# Conditionally load content from your content directory
+content_dir = Frontman::Config.get(:content_dir)
+Frontman::Bootstrapper.resources_from_dir(content_dir).each do |resource|
+  if resource.file_path.include?('foo')
+    sitemap_tree.add(resource)
+  end
+end
+
+# Add more content from another directory
+Frontman::Bootstrapper.resources_from_dir('additional/content').each do |resource|
   sitemap_tree.add(resource)
 end
 ----
